--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,22 +33,14 @@
     .container-fluid
 
       .row-fluid
-        .span3
-          - if content_for?(:sidebar)
-            = yield :sidebar
-          - else
-            .well.sidebar-nav
-              %h3 菜单
-              = tabs_tag :namespace => :sidebar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav nav-list"} do |tab|
-                %li.nav-header 项目
-                = tab.project "Project", projects_path
-              
-        .span9
-          - if content_for?(:title)
-            .page-header
-              %h1= yield(:title)
-          = notice_message
-          = yield
+        .page-header
+          %h1= @project.name
+        .subnav{:style => "margin-bottom: 10px"}
+          = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
+            = tab.add_report "Add Report", new_project_report_path(@project)
+        
+        = notice_message
+        = yield
     
       %footer
         %p &copy; Company 2012
