--- a/app/views/layouts/welcome.haml
+++ b/app/views/layouts/welcome.haml
@@ -34,10 +34,22 @@
       .page_top
         = render_breadcrumb
       .row-fluid
-        .page-header
-          %h1= @project.name
-        = notice_message
-        = yield
+        .span3
+          - if content_for?(:sidebar)
+            = yield :sidebar
+          - else
+            .well.sidebar-nav
+              %h3 菜单
+              = tabs_tag :namespace => :sidebar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav nav-list"} do |tab|
+                %li.nav-header 项目
+                = tab.project "Project", projects_path
+              
+        .span9
+          - if content_for?(:title)
+            .page-header
+              %h1= yield(:title)
+          = notice_message
+          = yield
     
       %footer
         %p &copy; Company 2012
