--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -37,7 +37,7 @@
           %h1= @project.name
         .subnav{:style => "margin-bottom: 10px"}
           = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
-            = tab.add_report "添加自定义报告", new_project_report_path(@project)
+            = tab.add_report "自定义报告", project_reports_path(@project)
         
         = notice_message
         = yield
