--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -1,3 +1,117 @@
 // Place all the styles related to the reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.action-add {
+  border-collapse: collapse;
+  border: 1px dashed;
+  border-radius: 3px 3px 3px 3px;
+  cursor: pointer;
+  float: left;
+  font-size: 13px;
+  font-weight: bold;
+  height: 16px;
+  margin: 3px 10px 3px 0;
+  padding: 5px;
+  text-align: center;
+  width: 196px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  
+  background: #F2F6FF;
+  border-color: #7B98E8;
+  color: #7B98E8;
+  
+  visibility: visible;
+}
+
+.action-add:hover {
+  border: 1px dashed #7B9453;
+}
+
+@mixin google{
+	border-collapse: collapse;
+	text-align: left;
+}
+
+@mixin div_form {
+	margin: 0;
+	padding: 0;
+	outline-style: none;
+}
+
+.metric_box {
+  float: left;
+  margin-right: 10px;
+
+	@include div_form;
+  @include google;
+}
+
+.ly {
+  background: no-repeat url(/assets/sprites.png) -527px -173px;
+  cursor: pointer;
+  float: left;
+  height: 12px;
+  margin: 3px 1px;
+  margin-left: -7px;
+  margin-top: 11px;
+  width: 12px;
+	@include google;
+}
+
+.metric_picker {
+	float: left;
+	@include div_form;
+}
+
+.metric_container {
+	background-color: white;
+	border: 1px solid #B0B0B0;
+	position: absolute;
+	visibility: hidden;
+	z-index: 10;
+	
+	@include div_form;
+	@include google;
+}
+
+.metric_display {
+	@include div_form;
+	
+	background: transparent url(/assets/menu_down_light.gif) no-repeat scroll 95% 50%;
+	border-radius: 3px 3px 3px 3px;
+	border-style: solid;
+	border-width: 1px;
+	color: white;
+	cursor: pointer;
+	font-weight: bold;
+	float: left;
+	height: 26px;
+	margin: 3px 10px 3px 0;
+	padding: 0;
+	-moz-border-radius: 3px 3px 3px 3px;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-webkit-border-bottom-right-radius: 3px;
+	white-space: nowrap;
+	width: 206px;
+	
+	background-color: #8FACFC;
+	border-color: #51649E;
+}
+
+.metric_label {
+	@include div_form;
+	
+	margin: 5px 20px 5px 5px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	
+}
