--- a/app/views/reports/_metric_group.haml
+++ b/app/views/reports/_metric_group.haml
@@ -1,36 +1,14 @@
 - javascript "jquery.chosen"
 
-- Report::TYPES.each do |type|
-  .well.metrics{:id => "type_#{type}"}
-    .action-add{:"data-popup" => "width:800px;height:300", :href => new_project_metric_path(@project, :type => type)} + 添加指标
+
+- Report.subclasses.each do |subclass|
+  .well.metrics{:id => "type_#{subclass.name.parameterize}", :style => "float:left"}
+    - @report.metrics.each do |metric|
+      .metric_box
+        .metric_picker
+          .metric_display{"data-popup" => "width:1200px", :href => edit_project_report_metric_path(@project, @report, metric)}
+            = short_description(metric)
+          .metric_container
+        = image_tag("cleardot.gif", :class => "ly")
+    .action-add{:"data-popup" => "width:1200px;", :href => new_project_report_metric_path(@project, @report, :type => subclass.name)} + 添加指标
     
-:css
-  .action-add {
-    border-collapse: collapse;
-    border: 1px dashed;
-    border-radius: 3px 3px 3px 3px;
-    cursor: pointer;
-    float: left;
-    font-size: 13px;
-    font-weight: bold;
-    height: 16px;
-    margin: 3px 10px 3px 0;
-    padding: 5px;
-    text-align: center;
-    width: 196px;
-    -moz-border-radius: 3px 3px 3px 3px;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-top-right-radius: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -webkit-border-bottom-right-radius: 3px;
-    
-    background: #F2F6FF;
-    border-color: #7B98E8;
-    color: #7B98E8;
-    
-    visibility: visible;
-  }
-  
-  .action-add:hover {
-    border: 1px dashed #7B9453;
-  }
