adjust project menu

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -38,6 +38,7 @@
         .subnav{:style => "margin-bottom: 10px"}
           = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
             = tab.add_report "添加自定义报告", new_project_report_path(@project)
+            = tab.add_menu "添加菜单", new_project_menu_path(@project)
         
         = notice_message
         = yield
