--- a/app/views/metrics/edit.haml
+++ b/app/views/metrics/edit.haml
@@ -1,18 +1,18 @@
 - javascript "jquery.chosen", "metrics"
 - stylesheet "jquery.chosen"
 
-= simple_form_for @metric, :url => project_report_metric_path(@project, @report, @metric), :html => {:method => :put, :class => "form-horizontal"} do |f|
+= simple_form_for @metric, :url => project_metric_path(@project, @metric), :html => {:method => :put, :class => "form-horizontal"} do |f|
   .row
     .span7#base
       = f.input :name
-      = render :partial => "metric_attributes", :locals => {:builder => f}
+      = render :partial => "form", :locals => {:builder => f}
       
     .span7#combine
       = f.input :combine_action, :collection => translate_collection(Metric::COMBINE_ACTIONS, :scope => "metric")
       
       = f.fields_for :combine do |combine|
         #combine_fields
-          = render :partial => "metric_attributes", :locals => {:builder => combine}
+          = render :partial => "form", :locals => {:builder => combine}
         
   .form-actions
     = f.submit "Submit", :class => "btn btn-primary"
