--- a/app/views/metrics/new.haml
+++ b/app/views/metrics/new.haml
@@ -1,17 +1,17 @@
 - javascript "metrics"
 
-= simple_form_for @metric, :url => project_report_metrics_path(@project, @report), :html => {:class => "form-horizontal"} do |f|
+= simple_form_for @metric, :url => project_metrics_path(@project), :html => {:class => "form-horizontal"} do |f|
   .row
     .span7#base
       = f.input :name
-      = render :partial => "metric_attributes", :locals => {:builder => f}
+      = render :partial => "form", :locals => {:builder => f}
       
     .span7#combine
       = f.input :combine_action, :collection => translate_collection(Metric::COMBINE_ACTIONS, :scope => "metric")
       
       = f.fields_for :combine do |combine|
         #combine_fields
-          = render :partial => "metric_attributes", :locals => {:builder => combine}
+          = render :partial => "form", :locals => {:builder => combine}
         
   .form-actions
     = f.submit "Submit", :class => "btn btn-primary"
