--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,7 +9,7 @@
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
     = stylesheet_link_tag    "application"
-    = javascript_include_tag "application"
+    = javascript_include_tag "application","menus"
     = yield :head
     :css
       body {
@@ -38,7 +38,6 @@
         .subnav{:style => "margin-bottom: 10px"}
           = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
             = tab.add_report "添加自定义报告", new_project_report_path(@project)
-            = tab.add_menu "添加菜单", new_project_menu_path(@project)  
         = notice_message
         = yield
     
