--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,1 +1,26 @@
-= render :partial => 'menu'
+.span2
+  .well.sidebar-nav
+    %div
+      = nested_list @menus.roots do |menu|
+        %div= "#{menu.name}"
+
+  %div= link_to '管理菜单', reorder_menus_path(:project_id=>@project.id)
+  %div= link_to '新增菜单', new_menu_path(:project_id => @project.id)
+  %div= link_to '列表菜单', menus_path(:project_id => @project.id)
+
+.span9
+  .hero-unit
+    %h1 Chart
+  .row-fluid
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th date
+          %th column
+          %th column
+      %tbody
+        %tr
+          %td{:rowspan=>2}1
+          %td Mark
+          %td Otto
+          %td mdo
