--- a/app/views/layouts/menu.haml
+++ b/app/views/layouts/menu.haml
@@ -9,7 +9,7 @@
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
     = stylesheet_link_tag    "application"
-    = javascript_include_tag "application"
+    = javascript_include_tag "application","menus"
     = yield :head
     :css
       body {
