add js template bundle

--- a/app/views/reports/edit.haml
+++ b/app/views/reports/edit.haml
@@ -1,4 +1,7 @@
-= include_javascripts :library, :metric_lib
+- javascript "backbone_bundle"
+= include_tempalate_js :metric_view
+- javascript "models/metric"
+
 - stylesheet "reports"
 
 - title "新建报告"
