--- a/app/views/menus/_form.haml
+++ b/app/views/menus/_form.haml
@@ -1,11 +1,29 @@
-= form_for @menu do |f|
-  %label 菜单名称
-  = f.text_field(:name)
-  %label 报表
-  = select_tag('point', Report.all.collect {|p| [ p.title, p.id ] },{ :multiple => true, :size =>4, :id => "menu_report" })
-  %label 描述
-  = f.text_area(:desc)
-  %label
-  = f.hidden_field(:project_id)
+- title "新建菜单"
 
-  = submit_tag('提交',:class=>'btn-primary')
+= simple_form_for @menu, :as => :menu, :html => {:class => "form-horizontal"} do |f|
+  .page-header
+    .h3
+      一般信息
+      %small 菜单名称及描述
+  .form-stocked
+
+    %fieldset
+      .row
+        .span6
+          = f.input :name
+          .control-group.string.optional
+            %label.string.optional.control-label 
+              %div　报表
+              %div.controls
+                = select_tag :point, options_for_select(@report.map {|p| [ p.title, p.id ] }),{ :multiple => true, :size =>4, :id => "menu_report" }
+          = f.input :desc
+          = f.hidden_field(:project_id)
+
+        .span7
+          %h4
+            菜单名称
+          %p
+            描述 报表可多选，最多选择四个报表
+  .form-actions
+    = f.submit "提交", :class => "btn btn-primary"
+    = link_to "取消", project_path(@project), :class => "btn"
