--- a/app/views/menus/_form.haml
+++ b/app/views/menus/_form.haml
@@ -15,7 +15,7 @@
             %label.string.optional.control-label 
               %div　报表
               %div.controls
-                = select_tag :point, options_for_select(@report.map {|p| [ p.title, p.id ] }),{ :multiple => true, :size =>4, :id => "menu_report" }
+                = select_tag :report_id, options_for_select(@report.map {|p| [ p.title, p.id ] }),{ :multiple => true, :size =>4, :id => "menu_report" }
           = f.input :desc
           = f.hidden_field(:project_id)
 
@@ -26,4 +26,4 @@
             描述 报表可多选，最多选择四个报表
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", project_path(@project), :class => "btn"
+    = link_to "取消", menus_path(:project_id => @project), :class => "btn"
