add period and js

--- a/app/views/reports/_metrics.haml
+++ b/app/views/reports/_metrics.haml
@@ -42,7 +42,7 @@
   $(function() {
   
     for(var i = 0; i < metric_data.length; i++) {
-      metrics.add(new Metric(metric_data[i]));
+      Metrics.add(new Metric(metric_data[i]));
     }
     
     
