--- a/app/views/metrics/_show.jst.haml
+++ b/app/views/metrics/_show.jst.haml
@@ -1,4 +1,6 @@
-.user
-  .abc
-    good
-    
+.metric_box
+  .metric_picker
+    .metric_display(data-popup="width:1200px" href=edit_url())
+      = attributes.name
+    .metric_container
+  %img.ly.del(data-id=attributes.id src="/assets/cleardot.gif")
