--- a/app/views/metrics/create.haml
+++ b/app/views/metrics/create.haml
@@ -1,13 +1,10 @@
-- javascript "models/metric"
-
 %p
   = link_to_function "返回报告页面", "add_metric()", :class => "btn btn-success"
   
 :javascript
 
   function add_metric() {
-    parent.metrics.push(new Metric(#{@metric.short_attributes.to_json}));
+    parent.Metrics.addItem(#{@metric.short_attributes.to_json});
     
-    parent.render_metrics();
     close_dialog();
   }
