--- a/app/views/reports/edit.haml
+++ b/app/views/reports/edit.haml
@@ -1,7 +1,4 @@
 - javascript "backbone_bundle"
-= include_tempalate_js :metric_view
-- javascript "models/metric"
-
 - stylesheet "reports"
 
 - title "新建报告"
@@ -30,3 +27,7 @@
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
     = link_to "取消", project_reports_path(@project), :class => "btn" 
+
+
+= include_js_template :metric_view
+= javascript_include_tag "models/metric.js"
