--- a/app/views/menus/_form.haml
+++ b/app/views/menus/_form.haml
@@ -1,6 +1,6 @@
 - title "新建菜单"
 
-= simple_form_for @menu, :as => :menu, :html => {:class => "form-horizontal"} do |f|
+= simple_form_for @menu, :as => :menu, :url=> project_menus_path(@project),:html => {:class => "form-horizontal"} do |f|
   .page-header
     .h3
       一般信息
@@ -26,4 +26,4 @@
             描述 报表可多选，最多选择四个报表
   .form-actions
     = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", menus_path(:project_id => @project), :class => "btn"
+    = link_to "取消", project_menus_path(@project), :class => "btn"
