--- a/app/views/menus/index.haml
+++ b/app/views/menus/index.haml
@@ -1,6 +1,6 @@
 %p
-  = link_to "添加菜单", new_menu_path(:project_id => @project), :class => "btn"
-  = link_to '菜单排序', reorder_menus_path(:project_id=>@project.id), :class => "btn"
+  = link_to "添加菜单", new_project_menu_path(@project), :class => "btn"
+  = link_to '菜单排序', reorder_project_menus_path(@project), :class => "btn"
   
 %table.table
   %tr
@@ -14,5 +14,5 @@
       %td= menu.name
       %td= menu.desc
       %td= menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
-      %td= link_to_edit edit_menu_path(menu)
-      %td= link_to_delete menu
+      %td= link_to_edit edit_project_menu_path(@project,menu)
+      %td= link_to_delete project_menu_path(@project,menu)
