--- a/app/views/reports/edit.haml
+++ b/app/views/reports/edit.haml
@@ -30,4 +30,4 @@
 
 
 = include_js_template :metric_view
-= javascript_include_tag "models/metric.js"
+= javascript_include_tag "models/metric.js", "models/report_type.js"
