--- a/app/views/menus/edit.haml
+++ b/app/views/menus/edit.haml
@@ -1,4 +1,4 @@
-- title "新建菜单"
+- title "编辑菜单"
 
 = simple_form_for @menu, :as => :menu, :url=> project_menu_path(@project,@menu),:html => {:class => "form-horizontal"} do |f|
   .page-header
@@ -11,11 +11,13 @@
       .row
         .span6
           = f.input :name
-          .control-group.string.optional
-            %label.string.optional.control-label
-              %div　报表
-              %div.controls
-                = select_tag :report_id, options_for_select(@report.map {|p| [ p.title, p.id ] }),{ :multiple => true, :size =>4, :id => "menu_report" }
+          - if @menu.child?
+            .control-group.string.optional
+              %label.string.optional.control-label
+                %div　报表
+                %div.controls
+                  = select_tag :report_id, options_for_select(@report.map {|p| [ p.title, p.id ] },@menu.report_ids),{ :multiple => true, :size =>6, :id => "menu_report" }
+
           = f.input :desc
           = f.hidden_field(:project_id)
 
