--- a/app/views/menus/reorder.haml
+++ b/app/views/menus/reorder.haml
@@ -5,13 +5,21 @@
 .page-header
   %h3
   可拖动菜单，目前只支持两级之间的拖拽。
-.row
+.row-fluid
   .span3
     .well.sidebar-nav
       #sortable
         = nested_list @menus.roots do |menu|
-          %div= "#{menu.name}"
+          - if menu.child?
+            %div
+              %table.table
+                %tr
+                  %td= menu.name
+                  %td{:float=>'right',:width=>'30px'}= link_to_edit edit_project_menu_path(@project,menu)
+
+          -else
+            %div= "#{menu.name}"
         .form-actions
-        = form_tag reorder_project_menus_path(@project) do
+        = form_tag reorder_project_menus_path(@project),:class=>'form-horizontal' do
           = submit_tag '保存',:class => 'btn btn-primary'
           = link_to "取消", project_menus_path(@project), :class => "btn"
