--- a/app/views/reports/new.haml
+++ b/app/views/reports/new.haml
@@ -1,28 +1,28 @@
+- javascript "backbone_bundle"
 - stylesheet "reports"
 
 - title "新建报告"
 
 = simple_form_for @report, :as => :report, :url => project_reports_path(@project), :html => {:class => "form-horizontal"} do |f|
-  .page-header
-    %h3 
-      一般信息
-      %small 填写报告目的，和报告说明
-  .form-stacked
-    
-    %fieldset
-      .row
-        .span6
-          = f.input :title
-          = f.input :description
-          = f.input :purpose
-          
-          = render :partial => "metrics", :locals => {:f => f}
-          
-        .span7
-          %h4
-            标题 目的和描述
-          %p
-            目的和描述会显示在报告的右侧
-  .form-actions
-    = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", project_reports_path(@project), :class => "btn" 
+  = render :partial => "form", :locals => {:f => f}
+
+
+
+= include_js_template :metric_view
+= javascript_include_tag "models/metric.js", "models/report_type.js"
+:javascript
+
+  var metric_data = #{@report.metrics.map(&:short_attributes).to_json }
+  var report_types = #{Report.subclasses.map{|subclass| {:selected => @report.class == subclass,:name => subclass.name, :human_name => subclass.model_name.human, :type_name => subclass.type_name} }.to_json}
+
+  $(function() {
+
+    _.each(report_types, function(rt) {
+      ReportTypes.add(new ReportType(rt));
+    });
+
+    _.each(metric_data, function(m) {
+      Metrics.add(new Metric(m))
+    });
+
+  })
