fix report type bug

--- a/app/views/reports/_form.haml
+++ b/app/views/reports/_form.haml
@@ -9,6 +9,7 @@
       .span6
         = f.input :title
         = f.input :type do
+          = f.hidden_field :type
           #report_types.btn-group
 
         = f.input :metrics do
