--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require bootstrap_and_overrides
  *= require jquery.ui
+ *= require calendar
  *= require jquery.chosen
 */
 
