--- a/app/views/reports/_report.haml
+++ b/app/views/reports/_report.haml
@@ -3,11 +3,15 @@
 
 .row-fluid
   .span9
-    #chart_container
+    #chart_container{:style => "position:relative"}
+      #report_desc{:style => "position: absolute;top: 10px;right: 10px;z-index: 999;"}
       #report_chart
   .span3
     .well
-      %h3= t(:description)
+      %h3
+        = t(:description)
+        %small.pull-right
+          = link_to t(:edit), edit_project_report_path(@project, @report)
       = simple_format @report.description
       = render :partial => "periods/date_form"
       
