--- a/app/views/layouts/welcome.haml
+++ b/app/views/layouts/welcome.haml
@@ -29,6 +29,8 @@
           .container-fluid.nav-collapse
             = tabs_tag :namespace => :topbar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav"} do |tab|
               = tab.project "Projects", projects_path
+              = tab.role "Role",roles_path
+              = tab.user "User",users_path
 
     .container-fluid
       .page_top
