--- a/app/views/roles/index.haml
+++ b/app/views/roles/index.haml
@@ -1,7 +1,7 @@
 %p
   = link_to "添加角色", new_role_path, :class => "btn"
 
-%table.table
+%table.table.table-bordered
   %tr
     %th 角色名称
     %th 创建时间
