--- a/app/views/menus/reorder.haml
+++ b/app/views/menus/reorder.haml
@@ -7,16 +7,12 @@
   可拖动菜单，目前只支持两级之间的拖拽。
 .row-fluid
   .span3
+  .span9
     .well.sidebar-nav
       #sortable
         = nested_list @menus.roots do |menu|
           - if menu.child?
-            %div
-              %table.table
-                %tr
-                  %td= menu.name
-                  %td{:float=>'right',:width=>'30px'}= link_to_edit edit_project_menu_path(@project,menu)
-
+            %div= link_to menu.name, edit_project_menu_path(@project,menu)
           -else
             %div= "#{menu.name}"
         .form-actions
