--- a/app/views/periods/_date_form.haml
+++ b/app/views/periods/_date_form.haml
@@ -7,6 +7,6 @@
   - else
     - (0..@report.period.compare_number).each do |i|
       %label{:for => "compare_time_#{i+1}"} 对比时间#{i+1}
-      = text_field_tag "compare_time_#{i+1}", nil, "data-datepicker" => "datepicker"
+      = text_field_tag "compare_time_#{i+1}", @report.period.compare_start_time(i), "data-datepicker" => "datepicker"
   .form-actions
     %a.btn.btn-primary#search= t(:search)
