--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,7 +33,10 @@
 
       .row-fluid
         .page-header
-          %h1= @project.name
+          %h1
+            = @project.name
+            %small
+              = @project.identifier
         .subnav{:style => "margin-bottom: 10px"}
           = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
             = tab.project "首页", project_path(@project)
