--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,11 +3,14 @@
   %head
     %meta{:charset => "utf-8"}/
     %title= content_for?(:title) ? yield(:title) : "XingCloud Analytic"
+    
     = csrf_meta_tags
+    
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
+    = javascript_include_tag "/xingcloud/global"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = yield :head
@@ -17,20 +20,6 @@
       }
       
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container-fluid
-          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
-            %span.i-bar
-            %span.i-bar
-            %span.i-bar
-          %a.brand{:href => "/"} XingCloud Analytic
-          .container-fluid.nav-collapse
-            = tabs_tag :namespace => :topbar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav"} do |tab|
-              = tab.project "项目列表", projects_path
-              = tab.role "Role",roles_path
-              = tab.user "User",users_path
-
     .container-fluid
 
       .row-fluid
