--- a/app/views/layouts/welcome.haml
+++ b/app/views/layouts/welcome.haml
@@ -8,6 +8,8 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
+    
+    = javascript_include_tag "/xingcloud/global"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = yield :head
@@ -18,25 +20,11 @@
 
 
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container-fluid
-          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
-            %span.i-bar
-            %span.i-bar
-            %span.i-bar
-          %a.brand{:href => "/"} XingCloud Analytic
-          .container-fluid.nav-collapse
-            = tabs_tag :namespace => :topbar, :builder => TabsOnRails::Bootstrap, :open_tabs => {:class => "nav"} do |tab|
-              = tab.project "Projects", projects_path
-              = tab.role "Role",roles_path
-              = tab.user "User",users_path
-
     .container-fluid
       .page_top
         = render_breadcrumb
       .row-fluid
-        .span3
+        .span2
           - if content_for?(:sidebar)
             = yield :sidebar
           - else
@@ -46,7 +34,7 @@
                 %li.nav-header 项目
                 = tab.project "项目列表", projects_path
               
-        .span9
+        .span10
           - if content_for?(:title)
             .page-header
               %h1= yield(:title)
